--- a/src/padding/_info_bar.scss
+++ b/src/padding/_info_bar.scss
@@ -16,9 +16,6 @@
   --infobar-vertical-margin: 8px;
   --infobar-button-vertical-margin: 4px;
 }
-#tab-notification-deck notification-message[message-bar-type="infobar"]:not([style*="margin-top"]) {
-  margin: var(--infobar-message-margin, 0 4px var(--infobar-message-vertical-margin)) !important;
-}
 
 :root:not([uidensity]) #tab-notification-deck,
 :root:not([uidensity]) notification-message[message-bar-type="infobar"] {
